--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -21,34 +21,21 @@
 			  <p>You can search for rings by their properties. If you are only interested in commutative rings, try the specialized search with expanded, commutative-only properties. </p>
 			  <p><a class="btn btn-default" href="search" role="button">All rings &raquo;</a><a class="btn btn-default" href="commsearch" role="button">Commutative rings &raquo;</a></p>
 			</div>
-			<div class="col-md-4">
-			  <h2>Browse</h2>
-			  <p>Explore what we've got:</p>
-			  <p><a class="btn btn-default" href="rings" role="button">All rings &raquo;</a><a class="btn btn-default" href="properties" role="button">All properties &raquo;</a></p>
-			  <p><a class="btn btn-default" href="commrings" role="button">Commutative rings &raquo;</a><a class="btn btn-default" href="commproperties" role="button">Commutative ring properties &raquo;</a></p>
-			  <p><a class="btn btn-default" href="theorems" role="button">Theorems &raquo;</a><a class="btn btn-default" href="bibliography" role="button">Cited works &raquo;</a></p>
-			</div>
+			
 		  </div>
 		</div>
 		<div class="container">
 		  <div class="row">
 			<div class="col-md-4">
-			  <h2>Contributing</h2>
+			  <h2>Contribute</h2>
 			  <p>There are a lot of ways you could help, even if you don't know what specifically what yet.</p>
 			  <p> <a class="btn btn-default" href="contribute" role="button">Contribute content &raquo;</a><a class="btn btn-default" href="https://github.com/rschwiebert/RingApp" role="button">I do GitHub &raquo;</a></p>
 			</div>
 			<div class="col-md-4">
 			  <h2>Learn</h2>
 			  <p>View a list of resources for studying ring theory.</p>
-			  <p><a class="btn btn-default" href="resources" role="button">Start learning &raquo;</a><a class="btn btn-default" href="properties" role="button">All properties &raquo;</a></p>
-		    </div>
-			
-		  </div>
-		</div>
-        <div class="container">
-		  <div class="row">
-			<div class="col-md-4">
-			  <h2>Other helpful sites</h2>
+			  <p><a class="btn btn-default" href="resources" role="button">Start learning &raquo;</a></p>
+<h3>Other helpful sites</h3>
 			    <p>If you like this site, then you also might like these sites:</p>
 				<ul>
 					<li><a href="http://topology.jdabbs.com/">π-Base</a>: A community database of topological examples with
@@ -61,6 +48,15 @@
 					<li><a href="http://ncatlab.org/nlab/show/HomePage">nLab</a>: a wiki-lab for collaborative work on Mathematics,
 						Physics and Philosophy </li>
 				</ul>
+
+		    </div>
+			
+		  </div>
+		</div>
+        <div class="container">
+		  <div class="row">
+			<div class="col-md-4">
+			  
 			  </div>
 		  </div>
 		</div>
