--- a/ringapp/templates/ringapp/commproperty_list.html
+++ b/ringapp/templates/ringapp/commproperty_list.html
@@ -4,18 +4,21 @@
 
 {% block body_block %}
 
-<h1>Commutative ring properties</h1>
+<div class="container">
+	<h1>Commutative ring properties</h1>
+    <div class="col-md-12 content">
+	<p>Here is a list of properties for commutative rings.</p>
+        <p>(Switch to the <a href="{% url 'property-list' %}">general ring properties index</a>.)</p>
 
-You are now browsing commutative ring properties that we track.
-
-{% if object_list %}
-    <ul>
-    {% for item in object_list %}
-        <li><a href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a>  </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No properties were retrieved.</p>
-{% endif %}
-
+	{% if object_list %}
+	    <ul>
+	    {% for item in object_list %}
+		<li><a href="{% url 'commproperty-detail' item.property_id %}">{{ item.name }}</a>  </li>
+	    {% endfor %}
+	    </ul>
+	{% else %}
+	    <p>No properties were retrieved.</p>
+	{% endif %}
+    </div>
+</div>
 {% endblock %}
