--- a/ringapp/templates/ringapp/login.html
+++ b/ringapp/templates/ringapp/login.html
@@ -1,39 +1,39 @@
 {% extends "ringapp/base.html" %}
 
 {% block body_block %}
+<div class="container">
+	{% if form.errors %}
+	<p>Your username and password didn't match. Please try again.</p>
+	{% endif %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+	{% if next %}
+	    {% if user.is_authenticated %}
+	    <p>Your account doesn't have access to this page. To proceed,
+	    please login with an account that has access.</p>
+	    {% else %}
+	    <p>Please login to see this page.</p>
+	    {% endif %}
+	{% endif %}
+        <h1> Login </h1>
+	<form method="post" action="{% url 'login' %}">
+	{% csrf_token %}
+	<table>
+	<tr>
+	    <td>{{ form.username.label_tag }}</td>
+	    <td>{{ form.username }}</td>
+	</tr>
+	<tr>
+	    <td>{{ form.password.label_tag }}</td>
+	    <td>{{ form.password }}</td>
+	</tr>
+	</table>
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
+	<input type="submit" value="login" />
+	<input type="hidden" name="next" value="{{ next }}" />
+	</form>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-{# Assumes you setup the password_reset view in your URLconf #}
-<!-- <p><a href="{% url 'password_reset' %}">Lost password?</a></p> -->
-<p><a href="{% url 'register' %}">Need to register?</a></p>
-
+	{# Assumes you setup the password_reset view in your URLconf #}
+	<!-- <p><a href="{% url 'password_reset' %}">Lost password?</a></p> -->
+	<p><a href="{% url 'register' %}">Need to register?</a></p>
+</div>
 {% endblock %}
