--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -31,10 +31,15 @@
     <div class="row">
       <div class="col-md-6 content">
 	<h2>Make a quick suggestion</h2>
+
+        {% if user.is_authenticated %}
 	<form action="" method="post">{% csrf_token %}
 	    {{ form.as_p }}
 	    <input type="submit" value="Submit suggestion" />
 	</form>
+        {% else %}
+        <p>(You need to <a href="{% url 'login' %}?next=/contribute/">log in</a> to contribute suggestions.)</p>
+        {% endif %}
 
 	</div>
         <div class="col-md-6 content">
