Another round of basic layout.

--- a/ringapp/templates/ringapp/register.html
+++ b/ringapp/templates/ringapp/register.html
@@ -2,11 +2,12 @@
 {% load staticfiles %}
 
 {% block body_block %}
-<h1>Register</h1>
+<div class="container">
+	<h1>Register</h1>
 
-<form method="post" action="">
-{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="Register" />
-
+	<form method="post" action="">
+	{% csrf_token %}
+	{{ form.as_p }}
+	<input type="submit" value="Register" />
+</div>
 {% endblock %}
