--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -4,7 +4,7 @@
 
 {% block body_block %}
 
-
+<div>
 	<!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 content">
             <h2>Search</h2>
             <p>You can search for rings by their properties. If you are only interested in commutative rings, try the specialized search with expanded, commutative-only properties. </p>
             <p><a class="btn btn-default" href="search" role="button">All rings &raquo;</a><a class="btn btn-default" href="commsearch" role="button">Commutative rings &raquo;</a></p>
@@ -25,12 +25,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 content">
                 <h2>Contribute</h2>
                 <p>There are a lot of ways you could help, even if you don't know what specifically what yet.</p>
                 <p> <a class="btn btn-default" href="contribute" role="button">Contribute content &raquo;</a><a class="btn btn-default" href="https://github.com/rschwiebert/RingApp" role="button">I do GitHub &raquo;</a></p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 content">
                 <h2>Learn</h2>
                 <p>View a list of resources for studying ring theory.</p>
                 <p><a class="btn btn-default" href="resources" role="button">Start learning &raquo;</a></p>
@@ -51,6 +51,7 @@
 
         </div>
     </div>
+</div>
         
 
 
