--- a/ringapp/templates/ringapp/results.html
+++ b/ringapp/templates/ringapp/results.html
@@ -3,25 +3,24 @@
 {% block title %}Ring search results{% endblock %}
 
 {% block body_block %}
-
+<div class="container">
+  <div class="col-md-12 content">
     <h1>Ring search results</h1>
-    You searched for rings
+    <p>You searched for rings
     {% if has_string %}
-    which ARE<br>
-    {{ has_string }},<br>
+    which ARE {{ has_string }},<br>
     {% endif %}
     {% if lacks_string %}
-    which ARE NOT<br>
-    {{ lacks_string }}
-    {% endif %}
-</div>
-<div>
+    which ARE NOT {{ lacks_string }}
+    {% endif %}</p>
+  </div>
+  <div class="col-md-6 content">
     <h2>Search results</h2>
     {% if main_results %}
     {% if scope == 'n' %}
-    These rings are known to satisfy all of your criteria:
+    <p>These rings are known to satisfy all of your criteria:</p>
     {% else %}
-    These rings are consistent with your criteria, but may not satisfy your criteria when more data is supplied.
+    <p>These rings are consistent with your criteria, but may not satisfy your criteria when more data is supplied.</p>
     {% endif %}
 
         <ul>
@@ -32,16 +31,15 @@
     {% else %}
         <p>The regular search turned up no rings.</p>
     {% endif %}
-</div>
-<div>
+  </div>
+  <div class="col-md-6 content">
     <h2>Mirror search results</h2>
     {% if mirror_results %}
     {% if scope == 'n' %}
-    These rings are known to satisfy the mirror image of all your criteria:
+    <p>These rings are known to satisfy the mirror image of all your criteria:</p>
     {% else %}
-    These rings are consistent with the mirror version of your criteria, but may not satisfy your criteria when more data is supplied.
+    <p>These rings are consistent with the mirror version of your criteria, but may not satisfy your criteria when more data is supplied.</p>
     {% endif %}
-    <br>
 
 
         <ul>
@@ -52,6 +50,7 @@
     {% else %}
         <p>The mirror search turned up no rings.</p>
     {% endif %}
+  </div>
 
-
+</div>
 {% endblock %}
