--- a/ringapp/templates/ringapp/search.html
+++ b/ringapp/templates/ringapp/search.html
@@ -4,53 +4,63 @@
 
 {% block body_block %}
 
-<h1>Search for rings</h1>
+<div class="container">
+    <div class="col-md-4 content">
+	<h1>Search for rings</h1>
 
-The compiled data is, naturally, incomplete. The status of a property for a given ring can be in three states:
-"has property," "doesn't have the property," and "unknown." Choosing narrow scope ensures that the results are
-known to match all inputs. Choosing wide scope excludes all rings that do not fit all inputs.
-So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties
-in question may have "unknown" status.<br>
-<br>
-
-<form action="results/" method="get">
-    {{ form.non_field_errors }}
-    <div class="fieldWrapper">
-        {{ form.scope.errors }}
-        <label for="scope">Scope:</label>
-        {{ form.scope }}
+	<p>The compiled data is, naturally, incomplete. The status of a property for a given ring can be in three states:
+	"has property," "doesn't have the property," and "unknown."</p>
+        <p>Choosing <b>narrow</b> scope ensures that the results are known to match all inputs. Choosing <b>wide</b> scope excludes all rings that do not fit all inputs.</p>
+	<p>So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.</p>
     </div>
-    <div class="fieldWrapper">
-        {{ form.has1.errors }}
-        <label for="has1">Is:</label>
-        {{ form.has1 }}
-    </div>
-    <div class="fieldWrapper">
-        {{ form.has2.errors }}
-        <label for="has2">Is:</label>
-        {{ form.has2 }}
-    </div>
-    <div class="fieldWrapper">
-        {{ form.has3.errors }}
-        <label for="has3">Is:</label>
-        {{ form.has3 }}
-    </div>
-    <div class="fieldWrapper">
-        {{ form.lacks1.errors }}
-        <label for="lacks1">Is not:</label>
-        {{ form.lacks1 }}
-    </div>
-    <div class="fieldWrapper">
-        {{ form.lacks2.errors }}
-        <label for="lacks2">Is not:</label>
-        {{ form.lacks2 }}
-    </div>
-    <div class="fieldWrapper">
-        {{ form.lacks3.errors }}
-        <label for="lacks3">Is not:</label>
-        {{ form.lacks3 }}
-    </div>
-    <p><input type="submit" value="Search" /></p>
-</form>
-
+    <div class="col-md-8 content">
+        <h2>Search form</h2>
+	<form action="results/" method="get">
+	    {{ form.non_field_errors }}
+          <div class="col-md-4 content">
+	    <h3>The ring</h3>
+	    <div class="fieldWrapper">
+		{{ form.has1.errors }}
+		<label for="has1">is:</label>
+		{{ form.has1 }}
+	    </div>
+	    <div class="fieldWrapper">
+		{{ form.has2.errors }}
+		<label for="has2">is:</label>
+		{{ form.has2 }}
+	    </div>
+	    <div class="fieldWrapper">
+		{{ form.has3.errors }}
+		<label for="has3">is:</label>
+		{{ form.has3 }}
+	    </div>
+          </div>
+          <div class="col-md-4 content">
+	    <h3>The ring</h3>
+	    <div class="fieldWrapper">
+		{{ form.lacks1.errors }}
+		<label for="lacks1">is not:</label>
+		{{ form.lacks1 }}
+	    </div>
+	    <div class="fieldWrapper">
+		{{ form.lacks2.errors }}
+		<label for="lacks2">is not:</label>
+		{{ form.lacks2 }}
+	    </div>
+	    <div class="fieldWrapper">
+		{{ form.lacks3.errors }}
+		<label for="lacks3">is not:</label>
+		{{ form.lacks3 }}
+	    </div>
+            <div class="fieldWrapper">
+		{{ form.scope.errors }}
+		<label for="scope">Scope:</label>
+		{{ form.scope }}
+	    </div>
+            <p><input class="btn btn-primary" type="submit" value="Search" /></p>
+          </div>
+	    
+	</form>
+   </div>
+</div>
 {% endblock %}
