Corrected/expanded some fields on Suggestion model, improved some wording in search form

--- a/ringapp/templates/ringapp/commsearch.html
+++ b/ringapp/templates/ringapp/commsearch.html
@@ -13,10 +13,9 @@
         <p>Choosing <b>narrow</b> scope ensures that the results are known to match all inputs. Choosing <b>wide</b> scope excludes all rings that do not fit all inputs.</p>
 	<p>So, there may be rings in wide scope results that aren't in narrow scope results, simply because the properties in question may have "unknown" status.</p>
 <p><u>Note:</u> the commutative ring search is performed against a different set of properties than the general ring search.
-   Some properties are not defined for general rings, some have been altered ("right Artinian" has become just "Artinian"), and some are completely absent.</p>
+   Some properties are not defined for general rings, some have been altered ("right Artinian" has become just "Artinian"), and some are completely absent. <a href="{% url 'search' %}">Click here to switch</a> to the general database search.</p>
     </div>
     <div class="col-md-8 content">
-        <h2>Search form</h2>
 	<form action="commresults/" method="get">
 	    {{ form.non_field_errors }}
           <div class="col-md-4 content">
@@ -25,11 +24,7 @@
 		{{ form.has.errors }}
 		{{ form.has }}
 	    </div>
-            <div class="fieldWrapper">
-		{{ form.scope.errors }}
-		<label for="scope">Scope:</label>
-		{{ form.scope }}
-	    </div>
+            <p><i>Multiple selections can be made in both columns.<br />(CTRL-click on desktops.)</i></p>
           </div>
           <div class="col-md-4 content">
 	    <h3>The ring is not</h3>
@@ -38,7 +33,11 @@
 		{{ form.lacks }}
 	    </div>
 	    
-
+            <div class="fieldWrapper">
+		{{ form.scope.errors }}
+		<label for="scope">Scope:</label>
+		{{ form.scope }}
+	    </div>
             <p><input class="btn btn-primary" type="submit" value="Search" /></p>
           </div>
 	    
