Fixing navbar problems a bit. Added link to mathcounterexamples.net. Fixed link to graded ring database.

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -48,10 +48,13 @@
             <li><a href="http://topology.jdabbs.com/">π-Base</a>:
                 A community database of topological examples with
                 automated deduction and powerful search</li>
-            <li><a href="http://grdb.lboro.ac.uk/">Graded Ring Database</a>:
+            <li><a href="http://mathcounterexamples.net/">Math Counterexamples</a>:
+                Mathematical exceptions to the rules or intuition. (Here you can find 
+                counterexamples from a variety of mathematical disciplines.)</li>
+
+            <li><a href="http://www.grdb.co.uk/">Graded Ring Database</a>:
                 A database of graded rings in algebraic geometry</li>
-            <li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its
-                Applications</a> at Ohio University</li>
+            <li><a href="https://www.facebook.com/ring.theory.and.its.applications">The Center of Ring Theory and its Applications</a> at Ohio University</li>
             <li><a href="http://stacks.math.columbia.edu/">
                 The Stacks Project</a>: an open source textbook and reference work on
                 algebraic stacks and the algebraic geometry needed to define them</li>
