--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -1,131 +1,117 @@
 <!DOCTYPE html>
 
 <html>
-    <head lang="en">
-                <meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
-		<meta name="description" content="">
-		<meta name="author" content="Ryan C. Schwiebert">
+  <head lang="en">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
+    <meta name="description" content="">
+    <meta name="author" content="Ryan C. Schwiebert">
 		
-		<title>DaRT - {% block title %}Database of Ring Theory{% endblock %}</title>
-		<link rel="icon" href="../../favicon.ico">
+    <title>DaRT - {% block title %}Database of Ring Theory{% endblock %}</title>
+    <link rel="icon" href="../../favicon.ico">
 		
-		<!-- Bootstrap core CSS -->
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<link href="/static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="/static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
-		<link href="/static/jumbotron.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/static/jumbotron.css" rel="stylesheet">
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-		<script type="text/x-mathjax-config">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script type="text/x-mathjax-config">
 		  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});
-		</script>
-		<script type="text/javascript" async
+    </script>
+    <script type="text/javascript" async
 		  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
-		</script>
-		    </head>
+    </script>
+  </head>
 
-    <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-		  <div class="container">
-			<div class="navbar-header">
-			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </button>
-			<div id="navbar" class="navbar-collapse collapse">
-			  <a class="navbar-brand" href="{% url 'index' %}">Database of Ring Theory</a>
-
-<ul class="nav navbar-nav">
-              
-
-              <li class="dropdown">
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header"><a class="navbar-brand" href="{% url 'index' %}">Database of Ring Theory</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+        </div>
+	<div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                   Rings
                   <span class="caret"></span>
                 </a>
-                <ul class="dropdown-menu" role="menu">
+              <ul class="dropdown-menu" role="menu">
                   
-                  <li><a href="{% url 'ring-list' %}">Browse all rings</a></li>
-                  <li><a href="{% url 'search' %}">Search all rings</a></li>
-                  <hr>
+                <li><a href="{% url 'ring-list' %}">Browse all rings</a></li>
+                <li><a href="{% url 'search' %}">Search all rings</a></li>
+                <hr>
+                
+                <li><a href="{% url 'commring-list' %}">Browse commutative rings</a></li>
+                <li><a href="{% url 'csearch' %}">Search commutative rings</a></li>
                   
-                  <li><a href="{% url 'commring-list' %}">Browse commutative rings</a></li>
-                  <li><a href="{% url 'csearch' %}">Search commutative rings</a></li>
-                  
-                </ul>
-              </li>
+              </ul>
+            </li>
               
-              <li class="dropdown">
+            <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                   Properties
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                  
-                  <li><a href="{% url 'property-list'%}">All properties</a></li>
-                  
-                  <li><a href="{% url 'commproperty-list'%}">Commutative ring properties</a></li>
-                  
-                </ul>
-              </li>
+                  <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">    
+                <li><a href="{% url 'property-list'%}">All properties</a></li>    
+                <li><a href="{% url 'commproperty-list'%}">Commutative ring properties</a></li>
+              </ul>
+            </li>
 
-              <li id="theoremsNav"><a href="{% url 'theorem-list'%}">Theorems</a></li>
-              <li id="sourcesNav"><a href="{% url 'bibliography'%}">Citations</a></li>
-              <li id="sourcesNav"><a href="{% url 'contribute'%}">Contribute</a></li>
-              <li id="sourcesNav"><a href="{% url 'resources'%}">Learn</a></li>
+            <li id="theoremsNav"><a href="{% url 'theorem-list'%}">Theorems</a></li>
+            <li id="sourcesNav"><a href="{% url 'bibliography'%}">Citations</a></li>
+            <li id="sourcesNav"><a href="{% url 'contribute'%}">Contribute</a></li>
+            <li id="sourcesNav"><a href="{% url 'resources'%}">Learn</a></li>
               
-              <li> {% if not request.user.is_authenticated %}<a class="btn btn-primary" href="{% url 'login' %}"><font color="white">Login</font></a>{% else %}<a class="btn btn-primary" href="{% url 'logout' %}"><font color="white">Logout</font></a></li>
+            <li> {% if not request.user.is_authenticated %}<a class="btn btn-primary" href="{% url 'login' %}"><font color="white">Login</font></a>{% else %}<a class="btn btn-primary" href="{% url 'logout' %}"><font color="white">Logout</font></a></li>
               <li><a class="btn btn-primary" href="{% url 'profile' %}"><font color="white">Profile</font></a>{% endif %}
             <name="top"/></li>             
-            </ul>
+          </ul>
 
-			  <!--<form class="navbar-form navbar-right">
-                            
-                                
-				<div class="form-group">
-				  <input type="text" placeholder="Email" class="form-control">
-				</div>
-				<div class="form-group">
-				  <input type="password" placeholder="Password" class="form-control">
-				</div>
-				<button type="submit" class="btn btn-success">Sign in</button>
-			  </form> -->
-			</div><!--/.navbar-collapse -->
-               </div>
-		  </div>
-		</nav>
-
-
-
-        <div>
+	  <!--<form class="navbar-form navbar-right">
+          <div class="form-group">
+	    <input type="text" placeholder="Email" class="form-control">
+          </div>
+	  <div class="form-group">
+	    <input type="password" placeholder="Password" class="form-control">
+	  </div>
+	  <button type="submit" class="btn btn-success">Sign in</button>
+	  </form> -->
+	</div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+    <div>
             {% block body_block %}{% endblock %}
-        </div>
-<hr />
-<div id="footer"><footer class="container">
-          <p>&copy;  Ryan C. Schwiebert 2014-2016 </p>
+    </div>
+    <hr />
+    <div id="footer"><footer class="container">
+      <p>&copy;  Ryan C. Schwiebert 2014-2016 </p>
         </footer>
-</div>
-		<!-- Bootstrap core JavaScript
-		================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="/static/assets/js/vendor/jquery.min.js"><\/script>')</script>
-		<script src="/static/js/bootstrap.min.js"></script>
-		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<script src="/static/assets/js/ie10-viewport-bug-workaround.js"></script>        
-
-    </body>
+    </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/static/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/static/assets/js/ie10-viewport-bug-workaround.js"></script>        
+  </body>
 </html>
