Enabled sitemap generation

--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -12,7 +12,7 @@
             <p align='center'>A repository of rings, their properties,
                 and more ring theory stuff.</p>
             <p align='center'><a class="btn btn-primary btn-lg"
-                                 href="about#mission" role="button">
+                                 href="about" role="button">
                 Learn more &raquo;</a></p>
         </div>
     </div>
