Added bing validation

--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="google-site-verification" content="pu9Z0hUTJz2dQW9bBTzX1KIiqXrlxF8XvJbVJJLPKHE" />
+    <meta name="msvalidate.01" content="4C8BD9384A39B37522503D44EE509608" />
     <meta name="description" content="">
     <meta name="author" content="Ryan C. Schwiebert">
 		
