--- a/ringapp/templates/ringapp/base.html
+++ b/ringapp/templates/ringapp/base.html
@@ -58,10 +58,13 @@
                   
                 <li><a href="{% url 'ring-list' %}">Browse all rings</a></li>
                 <li><a href="{% url 'search' %}">Search all rings</a></li>
-                <hr>
+                <hr />
                 
                 <li><a href="{% url 'commring-list' %}">Browse commutative rings</a></li>
                 <li><a href="{% url 'csearch' %}">Search commutative rings</a></li>
+                <hr />
+                <li><a href="{% url 'ksearch' %}">Search rings by keyword</a></li>
+                
                   
               </ul>
             </li>
