--- a/ringapp/templates/ringapp/commproperty_detail.html
+++ b/ringapp/templates/ringapp/commproperty_detail.html
@@ -15,8 +15,8 @@
 	    Rings without property: {{ lacksnum }}<br>
 	    </ul>
 	    <ul>
-		<li><a href="{% url 'cresults' %}?scope=n&has1={{ object.pk }}">View rings having this property</a></li>
-		<li><a href="{% url 'cresults' %}?scope=n&lacks1={{ object.pk }}">View rings not having this property</a></li>
+		<li><a href="{% url 'cresults' %}?scope=n&has={{ object.pk }}">View rings having this property</a></li>
+		<li><a href="{% url 'cresults' %}?scope=n&lacks={{ object.pk }}">View rings not having this property</a></li>
 	    </ul>
 
 	{% if metaproperties %}
