--- a/ringapp/templates/ringapp/property_detail.html
+++ b/ringapp/templates/ringapp/property_detail.html
@@ -14,8 +14,8 @@
 		Rings without property: {{ lacksnum }}<br>
 	    </ul>
 	    <ul>
-		<li><a href="{% url 'results' %}?scope=n&has1={{ object.pk }}">View rings having this property</a></li>
-		<li><a href="{% url 'results' %}?scope=n&lacks1={{ object.pk }}">View rings not having this property</a></li>
+		<li><a href="{% url 'results' %}?scope=n&has={{ object.pk }}">View rings having this property</a></li>
+		<li><a href="{% url 'results' %}?scope=n&lacks={{ object.pk }}">View rings not having this property</a></li>
 	    </ul>
 	{% if metaproperties %}
 
